feat: login method & private routes
