# controllers/score-controller.js
@@ -2,39 +2,6 @@ const Player = require('../models/player')
 
 class ScoreController {
 	async updateScore(req, res) {
-		// #swagger.tags = ['Score']
-  	// #swagger.description = 'Обновление score игрока'
-
-		/* #swagger.parameters['body'] = {
-        in: 'body',
-        required: true,
-        schema: {
-          id: '6822090b675832c7ee5dfa09',
-          score: '1500'
-        }
-		} */
-
-			/* #swagger.responses[200] = {
-					schema: {
-						status: "success",
-						message: "Результат сохранён",
-						data: [
-							{
-								"_id": "6822090b675832c7ee5dfa09",
-								"login": "login123",
-								"telephone": "+996550101010",
-								"score": 1500
-							}
-						]
-					}
-		} */
-	
-		/* #swagger.responses[500] = {
-					schema: {
-						message: "Ошибка при обновлении score",
-					}
-		} */
-
 		try {
 			const { id, score } = req.body
 
@@ -57,10 +24,10 @@ class ScoreController {
 				.limit(10)
 				.select('login telephone score')
 
-			return res.json({ 
-				status: 'success', 
-				message: 'Результат сохранён', 
-				data: topPlayers 
+			return res.json({
+				status: 'success',
+				message: 'Результат сохранён',
+				data: topPlayers,
 			})
 		} catch (e) {
 			console.log('err: ', e)
@@ -69,29 +36,6 @@ class ScoreController {
 	}
 
 	async getTopPlayers(req, res) {
-		// #swagger.tags = ['Score']
-  	// #swagger.description = 'Топ 10 игрков'
-
-			/* #swagger.responses[200] = {
-					schema: {
-						status: "success",
-						data: [
-							{
-								_id: '507f1f77bcf86cd799439011',
-								login: 'login123',
-								telephone: '+996550101010',
-								score: 0
-							}
-						]
-					}
-		} */
-
-		/* #swagger.responses[500] = {
-					schema: {
-						message: "Ошибка при получении списка игроков",
-					}
-		} */
-
 		try {
 			const topPlayers = await Player.find()
 				.sort({ score: -1 })
