# routes/score-routes.js
@@ -1,9 +1,10 @@
 const Router = require('express')
 const controller = require('../controllers/score-controller')
+const authMiddleware = require('../middleware/auth-middleware')
 
 const router = new Router()
 
-router.post('/update-score', controller.updateScore)
-router.get('/top-players', controller.getTopPlayers)
+router.post('/update-score', authMiddleware, controller.updateScore)
+router.get('/top-players', authMiddleware, controller.getTopPlayers)
 
 module.exports = router
